# Cube_render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup-vcpkg.bat  setup_vcpkg.sh
enc_temp_folder/d6ba4f5fae822adbabf635a3b8947/: main.cpp
include/: renderer.hpp  window.hpp
shaders/: shader.fs  shader.vs
src/core/: main.cpp
src/graphics/: renderer.cpp  window.cpp
